--- a/UI/material_library.ui
+++ b/UI/material_library.ui
@@ -34,11 +34,7 @@
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <layout class="QGridLayout" name="gridLayout">
-          <item row="0" column="0">
-           <widget class="QListWidget" name="material_list"/>
-          </item>
-         </layout>
+         <layout class="QGridLayout" name="gridLayout"/>
         </item>
        </layout>
       </widget>
