--- a/UI/material_library.ui
+++ b/UI/material_library.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>550</width>
-    <height>525</height>
+    <width>549</width>
+    <height>226</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>236</width>
+    <height>153</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Material Library</string>
@@ -28,13 +34,13 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>532</width>
-         <height>461</height>
+         <width>531</width>
+         <height>162</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <layout class="QGridLayout" name="gridLayout"/>
+         <layout class="QHBoxLayout" name="swatch_layout"/>
         </item>
        </layout>
       </widget>
@@ -47,7 +53,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>550</width>
+     <width>549</width>
      <height>23</height>
     </rect>
    </property>
