--- a/UI/material_library.ui
+++ b/UI/material_library.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>549</width>
-    <height>226</height>
+    <width>521</width>
+    <height>195</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Material Library</string>
+   <string>Arnold Material Library</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -29,13 +29,13 @@
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
-      <widget class="QWidget" name="scrollAreaWidgetContents">
+      <widget class="QWidget" name="scroll_area_contents">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>531</width>
-         <height>162</height>
+         <width>503</width>
+         <height>131</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout">
@@ -53,7 +53,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>549</width>
+     <width>521</width>
      <height>23</height>
     </rect>
    </property>
